--- a/com.godrejagrovet.FarmerApp/.classpath
+++ b/com.godrejagrovet.FarmerApp/.classpath
@@ -28,7 +28,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -38,6 +37,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/ass/selenium-server-4.27.0.jar"/>
+	<classpathentry kind="lib" path="D:/App/selenium-server-4.31.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
